# Transformation_Portal

./: .bash_history  .gitignore  .pr-branch-marker  .pr-marker-dd0d9a5  .pylintrc  CI_FIXES_SUMMARY.md  CODEBASE_REVIEW_REPORT.md  FILE_FORMAT_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  MERGE_READINESS_CHECKLIST.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PR100_FIX_SUMMARY.md  PR98_ACTION_ITEMS.md  PR98_VERIFICATION_REPORT.md  PR_ACTIONABLE_FIXES.md  PR_CONSOLIDATION_ANALYSIS.md  PR_REVIEW_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  README_PIPELINE.md  README_VERIFICATION.md  README_VFX_EXTENSION.md  SUPPORTED_FILE_FORMATS.md  VERIFICATION_COMPLETE.md  VFX_EXTENSION_FIX_SUMMARY.md  VFX_INTEGRATION_GUIDE.md  WORKFLOW_BUGS_FIXED.md  agx_batch_processor.py  board_material_aerial_enhancer.py  coastal_estate_render.py  code.ts  codebase_philosophy_auditor.py  color_science.py  convert_problem_tiffs.py  create_board_textures.py  decision_decay_dashboard.py  depth_predict_coreml.py  depth_tools.py  dreaming_pipeline.py  (+41 more)
.github/: copilot-firewall.yml  copilot-instructions.md
.github/workflows/: README.md  build.yml  codeql.yml  issue_printer.yml  main.yml  pylint.yml  python-app.yml  summary.yml
01_Film_Emulation/FilmConvert/: FilmConvert_Nitrate_HDR.cube
08_Documentation/: CHANGELOG_CLI_v1_3.md  Palette_Assignment_Guide.md  lantern_logo_component_spec.md  luxury_rendering_insights.md
08_Documentation/Version_History/: changelog.md
09_Client_Deliverables/Custom_Projects/: carolwood_executive_portrait_playbook.md  integrated_dataset.md  presence_compiler_annexes_v1.2.txt  presence_compiler_locales.yml  presence_compiler_spec_v1.1.txt  presence_manifest_example.json  presence_manifest_schema.json
09_Client_Deliverables/Lantern_Logo_Implementation_Kit/: README.md  gradient_composer.js  gradient_lineage.js  lantern_logo.css  lantern_pixel_guard.py  lantern_tokens.json
config/: default_config.yaml  exterior_preset.yaml  interior_preset.yaml
data/luts/: film_emulation  location  material_response
data/luts/film_emulation/FilmConvert/: FilmConvert_Nitrate_LuxuryRE.cube
data/luts/film_emulation/Kodak/: Kodak_2393_D55.cube  Kodak_2393_D55_HDR.cube
data/luts/location/: _location_notes.md
data/luts/location/California/: Montecito_Golden_Hour_HDR.cube
data/luts/location/Mediterranean/: Spanish_Colonial_Warm_HDR.cube
data/luts/material_response/: _Material_Response_Technical_Guide.md
depth_pipeline/: __init__.py  pipeline.py
depth_pipeline/models/: __init__.py  coreml_wrapper.py  depth_anything_v2.py
depth_pipeline/processors/: __init__.py  atmospheric_effects.py  base.py  depth_aware_denoise.py  depth_guided_filters.py  zone_tone_mapping.py
depth_pipeline/utils/: __init__.py  cache.py  depth_utils.py  image_utils.py
docs/: ARCHITECTURE.md  FORMAT_SUPPORT_OVERVIEW.md  OPERATIONS_GUIDE_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PIPELINE_OPERATIONS_GUIDE.md  QUICKSTART_CHEATSHEET.md  README_CLI_v1_3.md  REFACTORING_2025.md  REFACTORING_CHECKLIST.md  REFACTORING_SUMMARY.md  VFX_EXTENSION_GUIDE.md
docs/depth_pipeline/: DEPTH_PIPELINE_README.md
docs/processing/: PROCESSING_LOG.md
examples/: batch_process.py  custom_pipeline.py  enhance_aerial_example.py  example_palette.json  simple_process.py  validate_file_formats.py  vfx_extension_example.py
luxury_tiff_batch_processor/: __init__.py  adjustments.py  cli.py  io_utils.py  pipeline.py  profiles.py
presence_security_v1_2/: CERTIFICATION.yml  LICENSE_TIERS.md  PresenceCompiler.sol  RANDOMIZATION_CONFIG.yml  README_SECURITY.md  SECURITY_ROADMAP.md  TRUST_REGISTRY_EXAMPLE.json  TRUST_REGISTRY_SCHEMA.json  __init__.py  countermeasures.py  presence_params.py  watermarking.py
presence_security_v1_2/deprecated/: presence_cli_v1_2.py
processed_images/: Aerial_Enhancement_Summary.md  IMG_4069_lux.tiff  MBAR_Enhancement_Report.md  Pool_MBAR_Enhancement_Report.md
scripts/: create_board_textures.py  evolutionary_checkpoint.py  migrate_imports.py  synthetic_viewer.py  temporal_evolution.py  visualize_material_assignments.py
src/transformation_portal/: __init__.py
src/transformation_portal/analyzers/: __init__.py  codebase_philosophy_auditor.py  decision_decay_dashboard.py  parse_workflows.py
src/transformation_portal/enhancers/: __init__.py
src/transformation_portal/pipelines/: __init__.py  depth_tools.py  dreaming_pipeline.py  lux_render_pipeline.py
src/transformation_portal/processors/: __init__.py  luxury_video_master_grader.py
src/transformation_portal/processors/material_response/: __init__.py  optimizer.py
src/transformation_portal/rendering/: __init__.py  process_renderings_750.py
src/transformation_portal/utils/: color_science.py  helpers.py
tests/: TEST_STATUS.md  __init__.py  documentation.py  test_board_material_aerial_enhancer.py  test_coastal_estate_render.py  test_codebase_philosophy_auditor.py  test_cognitive_material_response.py  test_decision_decay_dashboard.py  test_depth_tools.py  test_evolutionary_checkpoint.py  test_float_roundtrip.py  test_format_utils.py  test_golden_hour_courtyard_workflow.py  test_gradient_lineage.py  test_holographic_node.py  test_lantern_logo_css.py  test_lantern_pixel_guard.py  test_luxury_tiff_batch_processor.py  test_luxury_video_master_grader.py  test_material_response.py  test_material_response_optimizer.py  test_material_texturing.py  test_montecito_manifest.py  test_parse_workflows.py  test_process_renderings_conversion.py  test_processing_capabilities.py  test_prophetic_orchestrator.py  test_realize_v8_vfx_extension.py  test_synthetic_viewer.py  test_temporal_evolution.py  tests_aerial_enhancer.py
tools/: FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md  V2_ENHANCEMENTS.md  ad_editorial_post_pipeline.py  ad_editorial_post_pipeline_v2.py  ad_editorial_post_pipeline_v3.py  montecito_manifest.py  sample_config.yml  test_ad_pipeline.py  test_ad_pipeline_v3.py
tools/deprecated/: README.md  ad_editorial_post_pipeline_v2.py  ad_editorial_post_pipeline_v3.py  test_ad_pipeline.py
