[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "transformation-portal"
version = "0.1.0"
description = "Professional image and video processing toolkit for luxury real estate rendering and architectural visualization."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RC219805" }]
dependencies = [
    "numpy>=1.24,<3",
    "Pillow>=10.0.0,<12",
    "scipy>=1.10,<2",
    "typer>=0.12,<1",
    "torch>=2.0,<3",
    "diffusers>=0.20,<1",
    "controlnet-aux>=0.0.6,<1",
    "realesrgan>=0.3.0,<1",
    "tqdm>=4.65,<5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tiff = [
    "tifffile>=2023.7.18,<2025",
    "imagecodecs>=2023.1.23",
]
ml = [
    "transformers>=4.35.0",
    "huggingface-hub>=0.19.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.0",
    "scikit-image>=0.21.0",
    "PyYAML>=6.0",
    "colour-science>=0.4.2",
    "coremltools>=7.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.115.0",
    "flake8>=7.0",
    "pylint>=3.2.0",
]
all = [
    "transformation-portal[tiff,ml,dev]",
]

[project.scripts]
# Main CLI entry points
transform-render = "transformation_portal.cli:render_cli"
transform-process = "transformation_portal.cli:process_cli"
transform-analyze = "transformation_portal.cli:analyze_cli"

# Legacy compatibility (can be removed in future versions)
luxury_video_grader = "transformation_portal.processors.luxury_video_master_grader:main"
lux_render = "transformation_portal.pipelines.lux_render_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "data*", "docs*", "scripts"]

[tool.pylint.main]
# Increase limits for complex image/video processing functions
max-args = 8
max-locals = 20
max-branches = 15
max-statements = 60
max-line-length = 127
max-module-lines = 1500

[tool.pylint.messages_control]
# Disable specific checks that are overly strict for this codebase
disable = [
    "too-few-public-methods",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "duplicate-code",
    "fixme",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --maxfail=3 --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"